--- a/public/create-invoice.html
+++ b/public/create-invoice.html
@@ -150,7 +150,7 @@
 
 <main class="invoice-builder">
 <h1>Create New Invoice</h1>
-<form action="/create-invoice" method="POST" enctype="multipart/form-data" onsubmit="prepareSignature()">
+<<form action="/save-invoice" method="POST" enctype="multipart/form-data" onsubmit="prepareSignature()">
   <fieldset>
 <legend>Client Info</legend>
 <label>Full Name <input name="name" required="" type="text"/></label>
